[package]
name = "nostr-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = { version = "0.19.1", features = ["blocking"] }
repl-rs = "0.2.7"
tokio = { version = "1.26.0", features = ["full"] }
