[package]
name = "nostr-cli"
version = "0.1.0"
authors = ["Jamin Menter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.5.40", features = ["derive"] }
nostr-sdk = "^0.42.0"
shlex = "1.3.0"
tokio = "1.45.1"
